2004-09-14 Sanjay Gupta <gsanjay@novell.com>

	* Control.cs: Added new attributes and a method.
	* FilterableAttribute.cs: New attribute, initial implementation.
	* ThemeableAttribute.cs: New attribute, initial implemenataion.

2004-09-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateParser.cs: ensure bin directory exists before trying to access
	it. Fixes bug #65446 (not closed yet due to dependencies).

2004-09-09 Sanjay Gupta <gsanjay@novell.com>

	* Control.cs: Implemented methods of interface IExpressionAccessor.

2004-09-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SimpleWebHandlerParser.cs: correctly cache Type instead of the
	assembly for ashx/asmx. Otherwise we need to open the file and check
	for the class name in there. Thanks to Ben for pointing this out.

2004-09-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateParser.cs: removed creation of StringWriter.  It's not used.
	* Control.cs: don't create the EventHandlerList until requested.

2004-09-03 Sanjay Gupta <gsanjay@novell.com>
	
	* Control.cs: Added new interfaces implemented in .Net 2.0. 
	* ExpressionBinding.cs: Added new class.
	* ExpressionBindingCollection.cs: Added new class.
	
2004-09-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* LiteralControl.cs: stylized. This control has EnableViewState disabled
	by default and doesn't get an automatic ID. When text is null -> "".

2004-08-31 Sanjay Gupta <gsanjay@novell.com>
	
	* ControlSkinProc.cs:
	* DataSourceViewOperationCallback.cs:
	* DataSourceViewSelectCallback.cs:
	* ExtractTemplateValuesMethod.cs: Explicit modifier "sealed" not 
	required in definition as delegates by default are sealed.
	
2004-08-31 Sanjay Gupta <gsanjay@novell.com>

	* IDReferencePropertyAttribute.cs: Corrected and changed from interface
	to class.
	* IMobileTextWriter.cs: Corrected method signatures.

2004-08-09 Sanjay Gupta <gsanjay@novell.com>

	* ControlSkinProc.cs:
	* DataSourceViewOperationCallback.cs: