@@ -1,3 +1,7 @@
+2009-09-14 Sanjay Gupta <gsanjay@novell.com>
+
+	* FilterableAttribute.cs: Completed implementation.
+
 2004-09-14 Sanjay Gupta <gsanjay@novell.com>
 
 	* Control.cs: Added new attributes and a method.
